src/app/view/components/main-legacy/main-legacy.component.scss
@import "mixins";
@import "../../../../styles/primeng-theme/utils/_mixins.scss";
@import "variables";

.layout {
    display: flex;
    flex-direction: column;
    height: 100vh;
    width: 100vw;
}

.layout__header {
    flex-shrink: 0;
    z-index: 11;
}

.layout__content {
    display: flex;
    flex-grow: 1;
    overflow: hidden;
}

.layout__main,
.layout__sidebar {
    overflow: auto;
}

.layout__main {
    flex-grow: 1;
    background-color: $gray-bg;
}

.layout__sidebar {
    background-color: $brand-background;
    flex-shrink: 0;
    transition: width $basic-speed * 2 cubic-bezier(0.25, 0.8, 0.25, 1);

    .collapsed & {
        overflow: hidden;
        width: 0;
    }
}

